# Mock-Logger

./: README.md  package.xml  setup.cfg  setup.py  test_bag_writer.py
embodied_event_logger/: generate_mock_msgs.py  subscriber_node.py
launch/: mock_logger.launch.py  mock_pub_sub.launch.py
