<?xml version="1.0"?>
<package format="3">
  <name>embodied_event_logger</name>
  <version>0.1.0</version>
  <description>Event logger for different robot embodiments</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
